# Live-Stock-Trading-App

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_project.bat  logs.txt  main.cpp  main_cli.cpp  oop_executable  server.cpp  server.h
.github/actions/cppcheck/: action.yml
.github/actions/process-artifacts/: action.yml
.github/workflows/: build.yml  cmake.yml
backend/: main  main.cpp
cli/: CLI.cpp  CLI.h  CommandHandlers.cpp  CommandHandlers.h  CommandParser.cpp  CommandParser.h
data/: CryptoStockData.cpp  EnergyStockData.cpp  HealthStockData.cpp  HistoricalData.cpp  TechStockData.cpp  TraderData.cpp  TransactionsData.cpp
exceptions/: DatabaseException.cpp  DatabaseException.h  MarketDataException.cpp  MarketDataException.h  NetworkException.cpp  NetworkException.h  OrderExecutionException.cpp  OrderExecutionException.h  StockErrors.h  StockException.h  StrategyException.cpp  StrategyException.h  SystemCriticalException.cpp  SystemCriticalException.h
include/: crow.h
include/crow/: app.h  common.h  http_connection.h  http_request.h  http_response.h  http_server.h  json.h  logging.h  multipart.h  multipart_view.h  mustache.h  parser.h  socket_acceptors.h  task_timer.h
includes/: Accumulator.h  BuyOrder.cpp  BuyOrder.h  CryptoStock.h  EnergyStock.h  HealthStock.cpp  HealthStock.h  HistoricalData.h  Logger.cpp  Logger.h  MarketDataManager.cpp  MarketDataManager.h  MarketSimulator.cpp  MarketSimulator.h  Order.h  OrderBook.cpp  OrderBook.h  PatternRecognition.cpp  PatternRecognition.h  PerformanceAnalyzer.cpp  PerformanceAnalyzer.h  Portfolio.cpp  Portfolio.h  RiskManager.cpp  RiskManager.h  ScopeTimer.cpp  ScopeTimer.h  SellOrder.cpp  SellOrder.h  Stock.cpp  Stock.h  StockException.h  StockFactory.cpp  StockFactory.h  StrategyOptimizer.cpp  StrategyOptimizer.h  TechStock.h  TechnicalAnalysis.cpp  TechnicalAnalysis.h  Trader.cpp  (+7 more)
libs/crow/: app.h  ci_map.h  http_parser_merged.h  http_server.h  middleware.h  middleware_context.h  routing.h  socket_adaptors.h  utility.h  websocket.h
scripts/: generate_data.ps1  run_cppcheck.sh
server/: Server.cpp  Server.h
server/routers/: AdminRouter.cpp  AdminRouter.h  AnalysisRouter.cpp  AnalysisRouter.h  MarketRouter.cpp  MarketRouter.h  PortfolioRouter.cpp  PortfolioRouter.h  TradingRouter.cpp  TradingRouter.h
